# myTrail

./: .gitignore  pyproject.toml
docs/: bot-operations.md
docs/superpowers/plans/: 2026-05-04-llm-telegram-reservation-bot.md
docs/superpowers/specs/: 2026-05-04-llm-telegram-reservation-bot-design.md
srtgo/bot/: auth_guard.py  handlers.py  main.py  notifier.py  parser.py  session.py  storage.py
srtgo/cli/: main.py  prompts.py
srtgo/cli/handlers/: check.py  reserve.py  settings.py
srtgo/config/: constants.py  settings.py
srtgo/logging/: filters.py  formatters.py  setup.py
srtgo/rail/: base.py
srtgo/rail/ktx/: client.py  constants.py  models.py  parser.py
srtgo/rail/srt/: client.py  constants.py  models.py  parser.py
srtgo/service/: auth.py  notification.py  payment.py  reservation.py
tests/: conftest.py
tests/bot/: test_auth_guard.py  test_handlers.py  test_parser.py  test_session.py  test_storage.py
tests/logging/: test_filters.py
tests/service/: test_auth.py  test_payment.py  test_reservation.py
