[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "srtgo"
authors = [
    {name = "DKim", email = "lapis42@gmail.com"},
]
description = "SRTgo: K-Train Reservation Helper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "click",
    "requests",
    "inquirer>=3.4",
    "keyring",
    "keyrings.alt",
    "PyCryptodome",
    "prompt_toolkit>=3",
    "python-telegram-bot",
    "termcolor",
    "anthropic>=0.40",
    "cryptography>=42",
    "python-dotenv>=1",
]

[project.optional-dependencies]
full = [
    "curl_cffi",
    "tls-client",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
]

[tool.setuptools_scm]
fallback_version = "0.0.1"

[project.urls]
Homepage = "https://github.com/lapis42/srtgo"

[project.scripts]
srtgo = "srtgo.cli.main:srtgo"
srtgo-bot = "srtgo.bot.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
